--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -268,14 +268,14 @@
 						console.log("click login btn");
 						doc.getElementById('email').blur();
 						doc.getElementById('password').blur();
-						var email = doc.getElementById('email').value.trim();
+						var email = filterText(doc.getElementById('email').value.trim());
 						var reg = /^(\w-*\.*)+@(\w-?)+(\.\w{2,})+$/
 						if(email == "" || !reg.test(email)) {
 							plus.nativeUI.toast(TextMessage.email_error1);
 							return;
 						}
 						reg = /^[0-9a-zA-Z]{6,16}$/
-						var password = doc.getElementById('password').value.trim();
+						var password = filterText(doc.getElementById('password').value.trim());
 						if(!reg.test(password)) {
 							plus.nativeUI.toast(TextMessage.password_error);
 							return;
