--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -252,7 +252,7 @@
 						doc.getElementById('passwordConfirm').blur();
 						doc.getElementById('verificationCode').blur();
 						canClick = false;
-						var email = doc.getElementById('email').value.trim();
+						var email = filterText(doc.getElementById('email').value.trim());
 						if (email == "") {
 							plus.nativeUI.toast(TextMessage.emailnull);
 							canClick = true;
@@ -275,7 +275,7 @@
 							canClick = true;
 							return;
 						}*/
-						var nickname = doc.getElementById('nickname').value.trim();
+						var nickname = filterText(doc.getElementById('nickname').value.trim());
 						if (nickname == "") {
 							plus.nativeUI.toast(TextMessage.nickname_null);
 							canClick = true;
@@ -286,7 +286,7 @@
 							canClick = true;
 							return;
 						}
-						var password = doc.getElementById('password').value.trim();
+						var password = filterText(doc.getElementById('password').value.trim());
 						if(password == ""){
 							plus.nativeUI.toast(TextMessage.password_notnull);
 							canClick = true;
@@ -298,7 +298,7 @@
 							canClick = true;
 							return;
 						}
-						var passwordConfirm = doc.getElementById('passwordConfirm').value.trim();
+						var passwordConfirm = filterText(doc.getElementById('passwordConfirm').value.trim());
 						if (password != passwordConfirm) {
 							plus.nativeUI.toast(TextMessage.confirmPwd_error);
 							canClick = true;
@@ -371,7 +371,7 @@
 						doc.getElementById('password').blur();
 						doc.getElementById('passwordConfirm').blur();
 						doc.getElementById('verificationCode').blur();
-						var email = doc.getElementById('email').value.trim();
+						var email = filterText(doc.getElementById('email').value.trim());
 						if (email == "") {
 							plus.nativeUI.toast(TextMessage.emailnull);
 							return;
@@ -390,7 +390,7 @@
 							plus.nativeUI.toast(TextMessage.username_error);
 							return;
 						}*/
-						var nickname = doc.getElementById('nickname').value.trim();
+						var nickname = filterText(doc.getElementById('nickname').value.trim());
 						if (nickname == "") {
 							plus.nativeUI.toast(TextMessage.nickname_null);
 							return;
@@ -399,7 +399,7 @@
 							plus.nativeUI.toast(TextMessage.nickname_error);
 							return;
 						}
-						var password = doc.getElementById('password').value.trim();
+						var password = filterText(doc.getElementById('password').value.trim());
 						if(password==""){
 							plus.nativeUI.toast(TextMessage.password_notnull);
 							return;
@@ -409,7 +409,7 @@
 							plus.nativeUI.toast(TextMessage.password_error);
 							return;
 						}
-						var passwordConfirm = doc.getElementById('passwordConfirm').value.trim();
+						var passwordConfirm = filterText(doc.getElementById('passwordConfirm').value.trim());
 						if (password != passwordConfirm) {
 							plus.nativeUI.toast(TextMessage.confirmPwd_error);
 							return;
@@ -419,7 +419,7 @@
 							plus.nativeUI.toast(TextMessage.addressnull);
 							return;
 						}
-						var verificationCode = doc.getElementById('verificationCode').value.trim();
+						var verificationCode = filterText(doc.getElementById('verificationCode').value.trim());
 						if (verificationCode == "") {
 							plus.nativeUI.toast(TextMessage.codenull);
 							return;
