--- a/kankan/pages/setting/blackLst.html
+++ b/kankan/pages/setting/blackLst.html
@@ -76,18 +76,19 @@
 				var black_id = blackListData[i].black_user_id;
 				var nick_name = blackListData[i].nick_name;
 				var html = new Util.StringBuilder();
-				html.appendFormat('<li class="mui-table-view-cell gotoDetail"><a class="mui-navigate-right">'+nick_name+'</a></li>');
+				html.appendFormat('<li class="mui-table-view-cell gotoDetail"><a class="mui-navigate-right" id="'+black_id+'">'+nick_name+'</a></li>');
 				$(".blackContents").append(html.toString());
-				mui('.gotoDetail').on('tap','a',function(e) {
+			}
+			mui('.gotoDetail').on('tap','a',function(e) {
+					var black_id = this.getAttribute('id');
 					mui.openWindow({
 						id: 'productslist',
-						url:'../main/products/productslist.html?prolid='+black_id,
+						url:'../main/products/productslist.html',
 						extras: {
 							"prolid": black_id
 						}
 				    });
-				});
-			}
+			});
 		}
 		var viewApi = mui('#app').view({
 			defaultPage: '#setting'
