登录之后详情页面一直loading问题修正

--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -700,9 +700,9 @@
 				var uadress = commodity.user_basic.pref_detail;
 				var ucomeditynum = commodity.user_basic.user_commodity_count;
 				var concernedtitle=TextMessage.det_concerneds;
-				console.dir(userblacklist);
+				//console.dir(userblacklist);
 				for (var i in userblacklist) {
-					if (userblacklist[i].user_id.indexOf(userid)!==-1) {
+					if (userblacklist[i].user_id == myid) {
 						flag = true;
 					}
 				}
