--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -125,7 +125,7 @@
 		</div>
 		<script type="text/javascript" src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/mui.enterfocus.js"></script>
-		<script type="text/javascript" src="../../js/app.js"></script>
+		<script type="text/javascript" src="../../js/kankan_app.js"></script>
 		<script type="text/javascript" src="../../js/jquery-3.2.0.min.js"></script>
 		<script type="text/javascript" src="../../js/language.js"></script>
 		<script type="text/javascript" src="../../js/md5.js"></script>
