--- a/kankan/pages/login/update_password.html
+++ b/kankan/pages/login/update_password.html
@@ -76,7 +76,7 @@
 			</div>
 		</div>
 		<script type="text/javascript" src="../../js/mui.min.js"></script>
-		<script type="text/javascript" src="../../js/app.js"></script>
+		<script type="text/javascript" src="../../js/kankan_app.js"></script>
 		<script type="text/javascript" src="../../js/jquery-3.2.0.min.js"></script>
 		<script type="text/javascript" src="../../js/language.js"></script>
 		<script type="text/javascript" src="../../js/sha1.js"></script>
